<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal">
    <PreferenceCategory android:title="@string/preferencias" >

    <ListPreference
        android:key="juego"
        android:title="@string/nivel"
        android:summary="@string/nivel1"
        android:entries="@array/tiposjuegos"
        android:entryValues="@array/tiposjuegosValores"
        android:defaultValue="0"/>
    <ListPreference
        android:key="preferencias"
        android:title="@string/guarda"
        android:summary="@string/guardar"
        android:entries="@array/tiposPrefe"
        android:entryValues="@array/tiposPrefeVal"
        android:icon="@mipmap/ic_score"
        android:defaultValue="0"/>
    <EditTextPreference
        android:key="nombre"
        android:title="@string/nombre"
        android:summary="@string/nombre1"
        android:icon="@mipmap/ic_mi_person"
        android:defaultValue="Yo"/>
   <!-- <CheckBoxPreference
        android:defaultValue="false"
        android:title="Reproducir música"
        android:key="musica"
        android:summary="Se reproduce música de fondo" /> -->

</PreferenceCategory>
</PreferenceScreen>